// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Lambda mappings > Should map AWS::Lambda::EventSourceMapping 1`] = `
"{
  "locals": {
    "resource_selfmanaged-kafka-bootstrap-servers_C65ED52F": "\${jsonencode({\\"KAFKA_BOOTSTRAP_SERVERS\\" = join(\\",\\", [\\"kafkaBootstrapServers\\"])})}"
  },
  "provider": {
    "aws": [
      {
        "alias": "us_east_1",
        "region": "us-east-1"
      }
    ]
  },
  "resource": {
    "aws_lambda_event_source_mapping": {
      "resource_22C949BF": {
        "amazon_managed_kafka_event_source_config": {
          "consumer_group_id": "consumerGroupId"
        },
        "batch_size": 1,
        "bisect_batch_on_function_error": true,
        "destination_config": {
          "on_failure": {
            "destination_arn": "destination"
          }
        },
        "document_db_event_source_config": {
          "collection_name": "collectionName",
          "database_name": "databaseName",
          "full_document": "update"
        },
        "enabled": true,
        "event_source_arn": "eventSourceArn",
        "filter_criteria": {
          "filter": [
            {
              "pattern": "pattern"
            }
          ]
        },
        "function_name": "functionName",
        "function_response_types": [
          "functionResponseTypes"
        ],
        "maximum_batching_window_in_seconds": 1,
        "maximum_record_age_in_seconds": 1,
        "maximum_retry_attempts": 1,
        "parallelization_factor": 1,
        "queues": [
          "queues"
        ],
        "scaling_config": {
          "maximum_concurrency": 1
        },
        "self_managed_event_source": {
          "endpoints": "\${jsondecode(local.resource_selfmanaged-kafka-bootstrap-servers_C65ED52F)}"
        },
        "self_managed_kafka_event_source_config": {
          "consumer_group_id": "consumerGroupId"
        },
        "source_access_configuration": [
          {
            "type": "type",
            "uri": "uri"
          }
        ],
        "starting_position": "LATEST",
        "starting_position_timestamp": "\${formatdate(\\"YYYY-MM-DD'T'hh:mm:ssZ\\", \\"100000\\")}",
        "topics": [
          "topics"
        ],
        "tumbling_window_in_seconds": 1
      }
    }
  },
  "terraform": {
    "backend": {
      "local": {
        "path": "/terraform.test-stack.tfstate"
      }
    },
    "required_providers": {
      "aws": {
        "source": "aws",
        "version": "5.65.0"
      }
    }
  },
  "variable": {
    "resource_refs_CDA17697": {
      "default": "\${aws_lambda_event_source_mapping.resource_22C949BF.id}",
      "type": "string"
    }
  }
}"
`;

exports[`Lambda mappings > Should map AWS::Lambda::LayerVersion 1`] = `
"{
  "provider": {
    "aws": [
      {
        "alias": "us_east_1",
        "region": "us-east-1"
      }
    ]
  },
  "resource": {
    "aws_lambda_layer_version": {
      "resource_22C949BF": {
        "compatible_architectures": [
          "x86_64"
        ],
        "compatible_runtimes": [
          "nodejs12.x"
        ],
        "description": "my description",
        "layer_name": "my-layer",
        "license_info": "my-license",
        "s3_bucket": "my-bucket",
        "s3_key": "my-key",
        "s3_object_version": "my-version",
        "skip_destroy": true
      }
    }
  },
  "terraform": {
    "backend": {
      "local": {
        "path": "/terraform.test-stack.tfstate"
      }
    },
    "required_providers": {
      "aws": {
        "source": "aws",
        "version": "5.65.0"
      }
    }
  },
  "variable": {
    "resource_refs_CDA17697": {
      "default": "\${aws_lambda_layer_version.resource_22C949BF.arn}",
      "type": "string"
    }
  }
}"
`;

exports[`Lambda mappings > Should map AWS::Lambda::LayerVersionPermission 1`] = `
"{
  "provider": {
    "aws": [
      {
        "alias": "us_east_1",
        "region": "us-east-1"
      }
    ]
  },
  "resource": {
    "aws_lambda_layer_version_permission": {
      "resource_22C949BF": {
        "action": "lambda:GetLayerVersion",
        "layer_name": "arn:aws:lambda:us-east-1:123456789012:layer:my-layer:1",
        "organization_id": "o-123456",
        "principal": "123456789012",
        "skip_destroy": true,
        "statement_id": "teststackawstackresourceC278F851",
        "version_number": "\${tonumber(element(split(\\":\\", \\"arn:aws:lambda:us-east-1:123456789012:layer:my-layer:1\\"), 7))}"
      }
    }
  },
  "terraform": {
    "backend": {
      "local": {
        "path": "/terraform.test-stack.tfstate"
      }
    },
    "required_providers": {
      "aws": {
        "source": "aws",
        "version": "5.65.0"
      }
    }
  },
  "variable": {
    "resource_refs_CDA17697": {
      "default": "\${aws_lambda_layer_version_permission.resource_22C949BF.id}",
      "type": "string"
    }
  }
}"
`;

exports[`Lambda mappings > Should map AWS::Lambda::Permission 1`] = `
"{
  "provider": {
    "aws": [
      {
        "alias": "us_east_1",
        "region": "us-east-1"
      }
    ]
  },
  "resource": {
    "aws_lambda_permission": {
      "resource_22C949BF": {
        "action": "lambda:InvokeFunction",
        "event_source_token": "token",
        "function_name": "my-function",
        "function_url_auth_type": "IAM",
        "principal": "sns.amazonaws.com",
        "principal_org_id": "123456789012",
        "source_account": "123456789012",
        "source_arn": "arn:aws:sns:us-east-1:123456789012:my-topic-1a2b3c4d"
      }
    }
  },
  "terraform": {
    "backend": {
      "local": {
        "path": "/terraform.test-stack.tfstate"
      }
    },
    "required_providers": {
      "aws": {
        "source": "aws",
        "version": "5.65.0"
      }
    }
  },
  "variable": {
    "resource_refs_CDA17697": {
      "default": "\${aws_lambda_permission.resource_22C949BF.id}",
      "type": "string"
    }
  }
}"
`;
